[project]
name = "nycu-computer-vision-for-uav-autopilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "djitellopy>=2.5.0",
    "ipykernel>=6.29.0,<7",
    "ipython>=8.18.0,<9",
    "matplotlib>=3.8.0,<3.9",
    "numpy>=1.24.0,<1.27", # NumPy 2.x is 3.10+ only
    "opencv-contrib-python>=4.9.0.80,<4.10",
    "opencv-python>=4.9.0.80,<4.10",
    "pynput==1.7.6",
    "scikit-image>=0.24.0",
    "simple-pid>=2.0.1",
]
